# darknet_ros

darknet_ros/: CMakeLists.txt  package.xml
darknet_ros/include/darknet_ros/: YoloObjectDetector.hpp
darknet_ros/src/: YoloObjectDetector.cpp  yolo_object_detector_node.cpp
darknet_ros_msgs/: CMakeLists.txt  package.xml
darknet_ros_msgs/msg/: BoundingBoxes.msg
